# internal/routers/api/v1/article.go
@@ -28,8 +28,8 @@ func (t Article) Get(c *gin.Context){
 // @Param name query string false "文章名称"
 // @Param tag_id query int false "标签ID"
 // @Param state query int false "状态"
-// @Param page query int false "页码"
-// @Param page_size query int false "每页数量"
+// @Param pageNo query int false "页码"
+// @Param pageSize query int false "每页数量"
 // @Success 200 {object} model.ArticleSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
